tests/fixtures/fail/layout_intrinsic_value_argument.sali
let main(): i32 = {
  let size = size_of(42)
  0
}
